修改所有不符合psr-4的文件路径及命名空间

--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,13 @@
   },
   "autoload": {
     "psr-4": {
-      "laravelflow\\": "src"
+      "LaravelFlow\\": "src/"
     }
   },
   "extra": {
     "laravel": {
       "providers": [
-        "laravelflow\\ServiceProvider"
+        "LaravelFlow\\LaravelFlowServiceProvider"
       ]
     }
   }
