--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,27 @@
 {
-    "name": "guoguo/laravelflow",
-    "description": "laravelflow PHP开源工作流引擎",
-    "license": "MIT",
-    "homepage": "http://cojz8.com",
-    "authors": [
-        {
-            "name": "guoguo",
-            "email": "632522043@qq.com"
-        }
-    ],
-    "require": {
-		"php": ">=7.0"
-	  },
-	  "autoload": {
-		"psr-4": {
-		  "laravelflow\\": "src"
-		}
-	  }
+  "name": "guoguo/laravelflow",
+  "description": "laravelflow PHP开源工作流引擎",
+  "license": "MIT",
+  "homepage": "http://cojz8.com",
+  "authors": [
+    {
+      "name": "guoguo",
+      "email": "632522043@qq.com"
+    }
+  ],
+  "require": {
+    "php": ">=7.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "LaravelFlow\\": "src/"
+    }
+  },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "LaravelFlow\\LaravelFlowServiceProvider"
+      ]
+    }
+  }
 }
